Allow setting cn and validity days on certificate generation
